--- a/CSS 9/style.html
+++ b/CSS 9/style.html
@@ -16,7 +16,11 @@ body {
     margin-left: 50px;
 
     border: 1px solid red;
+font-family: Georgia, serif;
 
+font-size: small;
+
+line-height: 1.75em;
 }
 
 p#doan1 { text-indent: 2em; }
@@ -37,6 +41,9 @@ a {
 
 
    h1 {
+font: bold 1.5em "Marko One", Georgia, serif;
+
+color: olive;
 
       color: darkgreen;
 
@@ -47,6 +54,18 @@ a {
   text-shadow: 0 0 .7em purple;
 
     
+}
+#info p {
+
+font-style: italic;
+
+color: gray;
+
+}
+h1, h2, #info {
+
+text-align: center;
+
 }
 p.bulleted {
 
